--- a/template/iCMS/mobile/user/home.htm
+++ b/template/iCMS/mobile/user/home.htm
@@ -59,10 +59,10 @@
       </div>
     </div>
     <div id="pages_next" class="hide">
-        <!--{$iCMS.page.next}-->
+        <!--{$iCMS.PAGE.NEXT}-->
     </div>
     <script>
-    iCMS.scrollLoad(".userApp_content",".userApp_day","#pages_next","<!--{$iCMS.page.total}-->");
+    iCMS.scrollLoad(".userApp_content",".userApp_day","#pages_next","<!--{$iCMS.PAGE.TOTAL}-->");
     </script>
     <!--{include file="{iTPL}/footer.htm"}-->
     <script src="<!--{$user.hits_script}-->"></script>
