--- a/template/iCMS/mobile/user/manage/comment.htm
+++ b/template/iCMS/mobile/user/manage/comment.htm
@@ -52,7 +52,7 @@
 			</tbody>
 			<tfoot>
 	            <tr>
-	              <td colspan="3"><div class="iCMS_pagination"><!--{$iCMS.page.nav}--></div></td>
+	              <td colspan="3"><div class="iCMS_pagination"><!--{$iCMS.PAGE.NAV}--></div></td>
 	            </tr>
           </tfoot>
 		</table>
