--- a/template/iCMS/user/profile/base.htm
+++ b/template/iCMS/user/profile/base.htm
@@ -116,7 +116,7 @@
           </select>
         </dt>
       </dl>
-      
+
       <!--
 <div class="title mt30"> <span>身材信息</span> <span style="font-weight:normal;font-size:12px;padding-left:10px;">^_^ 用心填写这几项信息，会帮助女人邦给你推荐合适的衣服和鞋子哦~</span>
 		<select name="isSeeFigure" id="isSeeFigure" class="is_show_sel">
@@ -203,12 +203,12 @@
         </dt>
         <dd>&nbsp;&nbsp;</dd>
         <dt>
-          <input type="submit" class="btn" value="确认修改">
+          <input type="submit" class="btn btn-primary" value="确认修改">
         </dt>
       </dl>
     </form>
   </div>
-  <script type="text/javascript" src="http://s.ladyband.cn/js/city_utf8.js?v=1366268649"></script> 
+  <script type="text/javascript" src="http://s.ladyband.cn/js/city_utf8.js?v=1366268649"></script>
   <script type="text/javascript">
 $(function(){
 	initPlace('<!--{$userdata.city}-->','<!--{$userdata.province}-->');
@@ -278,5 +278,5 @@ function isParent(a, b) {
 	}
 	return !1
 }
-</script> 
-  
+</script>
+
