--- a/template/iCMS/user/profile/setpassword.htm
+++ b/template/iCMS/user/profile/setpassword.htm
@@ -29,8 +29,8 @@
           <a href="javascript:;" id="iCMS-seccode-text">换一张</a> </dt>
         <dd>&nbsp;</dd>
         <dt class="clearfix subbox">
-          <input class="btn" type="submit" value="确认修改">
-          <input class="btn btn-mini" type="reset" value="取消">
+          <input class="btn btn-primary" type="submit" value="确认修改">
+          <input class="btn" type="reset" value="取消">
         </dt>
       </dl>
     </form>
