--- a/template/mobile/category.index.htm
+++ b/template/mobile/category.index.htm
@@ -64,11 +64,11 @@
         </ul>
       </div>
       <div id="pages_next" class="hide">
-        <!--{$iCMS.page.next}-->
+        <!--{$iCMS.PAGE.NEXT}-->
       </div>
     </div>
     <script>
-    iCMS.scrollLoad("#iCMS-article-list .list","li","#pages_next",<!--{$iCMS.page.total}-->);
+    iCMS.scrollLoad("#iCMS-article-list .list","li","#pages_next",<!--{$iCMS.PAGE.TOTAL}-->);
     </script>
     <!--{include file="./footer.htm"}-->
   </body>
