--- a/app/admincp/ui/admincp-6.0.0.css
+++ b/app/admincp/ui/admincp-6.0.0.css
@@ -16,11 +16,26 @@ body { background-color: #EDEDED; color: #000; }
 .nav-tabs { margin-bottom: 0px; }
 .input-append a.btn { border: 1px solid #ccc !important; }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { background-color: #08c; }
-
 /*bootstrap admincp*/
 .table th { background: #fafafa url("table_head.gif") repeat-x 0 100%; }
 .table td { background-color: #fff; }
 .table tbody .checker { margin-left: 3px !important; }
+
+/* modal */
+.modal { z-index: 9999 !important; margin: 0px !important; display: none; }
+.modal .modal-header { padding: 3px 15px; -webkit-border-top-left-radius: 4px; -webkit-border-top-right-radius: 4px; -moz-border-radius-topleft: 4px; -moz-border-radius-topright: 4px; border-top-left-radius: 4px; border-top-right-radius: 4px; }
+.modal .modal-header h3 { font-size: 18px; }
+.modal .modal-footer { padding: 10px 15px; }
+.modal .modal-body { overflow: hidden; padding: 0px; max-height: 100%; height: 100%; }
+.modal .modal-body a.cancel { color: #259; margin-right: 15px; cursor: pointer; }
+.modal .modal-body a.cancel:hover { text-decoration: underline; }
+.modal .modal-loading { margin: 10px }
+.modal .buttons { padding: 0 15px; margin-bottom: 15px; text-align: right; background: #fff }
+#modal-iframe { top: 0px; left: 0px; width: 100%; height: 100%; }
+#modal-iframeFix { top: 0px; left: 0px; width: 100%; height: 100%; background: #fff; position: absolute; opacity: 0.001; zIndex: 1000; display: none; }
+#modal-overlay { position: fixed; top: 0px; left: 0px; z-index: 100; width: 100%; height: 100%; background-color: #000; opacity: 0.75; -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=75)"; filter: alpha(opacity=75); -moz-opacity: 0.75; }
+
+
 /* chosen */
 .chosen-container-single .chosen-single { background-image: none !important; -webkit-box-shadow: none !important; -moz-box-shadow: none !important; box-shadow: none !important; }
 .input-prepend .chosen-container-single .chosen-single { -webkit-border-top-left-radius: 0; -moz-border-radius-topleft: 0; border-top-left-radius: 0; -webkit-border-bottom-left-radius: 0; -moz-border-radius-bottomleft: 0; border-bottom-left-radius: 0; }
