--- a/public/ui/iCMS-6.0.0.css
+++ b/public/ui/iCMS-6.0.0.css
@@ -1,29 +1,12 @@
 /*ie fix*/
 @-ms-viewport { width: device-width; }
-* { word-wrap: break-word; word-break: break-all }
-body, button, input, select, textarea { color: #111; font: 14px/1.75 "Helvetica Neue", Helvetica, Tahoma, Arial, "\5b8b\4f53", sans-serif }
-.r3 { border-radius: 3px }
-.r5 { border-radius: 5px }
-.r10 { border-radius: 10px }
-.rt3 { border-radius: 3px 3px 0 0 }
-.rt5 { border-radius: 5px 5px 0 0 }
-.rt10 { border-radius: 10px 10px 0 0 }
-.rb3 { border-radius: 0 0 3px 3px }
-.rb5 { border-radius: 0 0 5px 5px }
-.rb10 { border-radius: 0 0 10px 10px }
-.rl3 { border-radius: 3px 0 0 3px }
-.rl5 { border-radius: 5px 0 0 5px }
-.rl10 { border-radius: 10px 0 0 10px }
-.rr3 { border-radius: 0 3px 3px 0 }
-.rr5 { border-radius: 0 5px 5px 0 }
-.rr10 { border-radius: 0 10px 10px 0 }
 .psb { padding: 20px 0 15px 25px !important }
 .gc, .bc, .nc { color: #ff86b6 !important }
 .ofh { overflow: hidden; text-overflow: ellipsis; white-space: nowrap; word-wrap: normal; word-break: normal; -o-text-overflow: ellipsis }
 .ft6 { color: #666 }
 .fta { color: #aaa }
 a,a:hover,a:focus { color: #259 }
-/* bootstrap */
+/* bootstrap v2.3.1 */
 .btn, .add-on, .navbar-inner, .label, .navbar a, .switch-left, .switch-right { background-image: none !important; -webkit-box-shadow: none !important; -moz-box-shadow: none !important; box-shadow: none !important; }
 .form-inline input, .form-inline textarea, .form-inline select { color: #1A1A1A !important; }
 .tab-content { overflow: visible; /* background-color: #fff; border: 1px solid #ddd;  */ padding: 10px; border-top: 0px; -webkit-border-radius: 4px; -moz-border-radius: 4px; border-radius: 4px; -webkit-border-top-left-radius: 0; -moz-border-radius-topleft: 0; border-top-left-radius: 0; -webkit-border-top-right-radius: 0; -moz-border-radius-topright: 0; border-top-right-radius: 0; }
@@ -41,9 +24,10 @@ a,a:hover,a:focus { color: #259 }
 .input-append a.btn { border: 1px solid #ccc !important; }
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .btn-primary.disabled, .btn-primary[disabled] { background-color: #08c; }
 /* ==modal== */
-.modal { border: 1px solid #FFFFFF; }
+/*.modal { border: 1px solid #FFFFFF; }
 .modal .modal-header { background-color: #1575d5; background-image: -moz-linear-gradient(top, #1d7fe2, #0865c2); background-image: -ms-linear-gradient(top, #1d7fe2, #0865c2); background-image: -webkit-gradient(linear, 0 0, 0 100%, from(#1d7fe2), to(#0865c2)); background-image: -webkit-linear-gradient(top, #1d7fe2, #0865c2); background-image: -o-linear-gradient(top, #1d7fe2, #0865c2); background-image: linear-gradient(top, #1d7fe2, #0865c2); background-repeat: repeat-x; filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#1d7fe2', endColorstr='#0865c2', GradientType=0); padding: 3px 15px; border-radius: 6px 6px 0 0; border: 1px solid #0D6EB8; box-shadow: 0 1px 0 rgba(255, 255, 255, .1) inset, 0 1px 1px rgba(0, 0, 0, .2); margin: -1px -1px 0; line-height: 14px }
 .modal .modal-header h3 { color: #fff; text-shadow: 0 1px 1px rgba(0, 0, 0, .4); font-size: 15px; font-weight: 700 }
+*/
 /* ==piece== */
 .piece { border-radius: 10px }
 .piece .piece_hd { border-radius: 10px 10px 0 0 }
@@ -69,6 +53,7 @@ a,a:hover,a:focus { color: #259 }
 .mod .bd:after { display: block; visibility: hidden; clear: both; height: 0; content: "." }
 /* ==iCMS== */
 /* icon */
+.iCMS_API_iframe { width: 100% }
 .iCMS_icon { width: 16px; height: 16px; background-image: url(img/sprites-1.9.1.png); background-repeat: no-repeat; display: inline-block; vertical-align: middle }
 /* pagination */
 .iCMS_pagination { margin: 10px; clear: both; max-height: 30px; position: relative; text-align: center }
@@ -90,31 +75,31 @@ a,a:hover,a:focus { color: #259 }
 .iCMS_profile_wrap .popover .dropdown-menu>li>a { font-size: 14px }
 /* .iCMS_hover_wrap { display: none; z-index: 999; position: absolute; top: 0; left: 0; min-width: 120px; border-radius: 0 0 3px 3px; background: #FFF }
 */
-/* */
-#iCMS-login-dialog { display: none }
-.iCMS_login_wrap .login_box { padding: 0 12px 24px; background-color: #fff }
-.iCMS_login_wrap .login_form { float: left; padding: 10px 25px 5px 10px; width: 280px; *padding-top: 10px }
-.iCMS_login_wrap .login_form dd { float: left; width: 58px; vertical-align: middle; text-align: right; line-height: 26px }
-.iCMS_login_wrap .login_form dt { margin-bottom: 15px; height: 26px; color: #666; font-weight: normal; _margin-bottom: 10px }
-.iCMS_login_wrap .login_form dt .checkbox { margin: 0px 4px 0px 0px; vertical-align: top }
-.iCMS_login_wrap .login_form a { padding-left: 12px; color: #8e8e8e; _margin_bottom: 5px }
-.iCMS_login_wrap .register_box { line-height: 16px }
-.iCMS_login_wrap .reg_btn { display: block; margin: 10px 0 20px; width: 141px; height: 30px; background: url(img/book_regist.png) no-repeat; cursor: pointer }
-.iCMS_login_wrap .lb_bd { width: 560px }
-.iCMS_login_wrap .l_o a { display: inline-block; margin: 2px 5px 10px; padding: 0 0 0 19px; background: url(img/login_method_v3.png) no-repeat 0 0; color: #666; line-height: 16px }
-.iCMS_login_wrap .login_fail { font-size: 12px; visibility: hidden; padding-top: 10px; padding-left: 65px; width: 360px; color: #FE2617 }
-.iCMS_login_wrap .login_fail .tooltip { position: static !important; margin: 0px !important; padding: 0px !important; }
-.iCMS_login_wrap .login_fail .tooltip .tooltip-arrow { display: none; }
-.iCMS_login_wrap .login_fail .tooltip .tooltip-inner { background-color: #fff; color: #FE2617; font-size: 12px; margin: 0px !important; padding: 0px !important; }
-.iCMS_login_wrap .login_fail .tooltip .tooltip-inner i { font-size: 16px; }
-.iCMS_login_wrap .reg_or_weibo { display: inline-block; padding-left: 30px; width: 160px; border-left: 1px solid #c8c8c8 }
-.iCMS_login_wrap .lb_bd .lb_s { margin: 0 auto; padding: 55px; width: 180px; height: 45px }
-.iCMS_login_wrap .lb_bd .lb_s .lb_s_img { display: block; float: left; width: 43px; height: 43px }
-.iCMS_login_wrap .lb_bd .lb_s .lb_s_t { display: block; float: left; margin: 12px 0 0 12px; width: 120px; color: #333; font-size: 22px }
-.iCMS_API_iframe { width: 100% }
+/* login */
+#iCMS-login-box {display: none;}
+.iCMS_login_dialog{width: 560px;}
+.iCMS_login_dialog .login_box { padding: 0 12px 24px; background-color: #fff }
+.iCMS_login_dialog .login_form { float: left; padding: 10px 25px 5px 10px; width: 280px; *padding-top: 10px }
+.iCMS_login_dialog .login_form dd { float: left; width: 58px; vertical-align: middle; text-align: right; line-height: 26px }
+.iCMS_login_dialog .login_form dt { margin-bottom: 15px; height: 26px; color: #666; font-weight: normal; _margin-bottom: 10px }
+.iCMS_login_dialog .login_form dt .checkbox { margin: 0px 4px 0px 0px; vertical-align: top }
+.iCMS_login_dialog .login_form a { padding-left: 12px; color: #8e8e8e; _margin_bottom: 5px }
+.iCMS_login_dialog .register_box { line-height: 16px }
+.iCMS_login_dialog .reg_btn { display: block; margin: 10px 0 20px; width: 141px; height: 30px; background: url(img/book_regist.png) no-repeat; cursor: pointer }
+.iCMS_login_dialog .lb_bd { width: 560px }
+.iCMS_login_dialog .l_o a { display: inline-block; margin: 2px 5px 10px; padding: 0 0 0 19px; background: url(img/login_method_v3.png) no-repeat 0 0; color: #666; line-height: 16px }
+.iCMS_login_dialog .login_fail { font-size: 12px; visibility: hidden; padding-top: 10px; padding-left: 65px; width: 360px; color: #FE2617 }
+.iCMS_login_dialog .login_fail .tooltip { position: static !important; margin: 0px !important; padding: 0px !important; }
+.iCMS_login_dialog .login_fail .tooltip .tooltip-arrow { display: none; }
+.iCMS_login_dialog .login_fail .tooltip .tooltip-inner { background-color: #fff; color: #FE2617; font-size: 12px; margin: 0px !important; padding: 0px !important; }
+.iCMS_login_dialog .login_fail .tooltip .tooltip-inner i { font-size: 16px; }
+.iCMS_login_dialog .reg_or_weibo { display: inline-block; padding-left: 30px; width: 160px; border-left: 1px solid #c8c8c8 }
+.iCMS_login_dialog .lb_bd .lb_s { margin: 0 auto; padding: 55px; width: 180px; height: 45px }
+.iCMS_login_dialog .lb_bd .lb_s .lb_s_img { display: block; float: left; width: 43px; height: 43px }
+.iCMS_login_dialog .lb_bd .lb_s .lb_s_t { display: block; float: left; margin: 12px 0 0 12px; width: 120px; color: #333; font-size: 22px }
 /* ==========report============= */
-#iCMS-report-box { display: none; padding: 10px; }
-.iCMS_report_dialog { }
+#iCMS-report-box {display: none;}
+.iCMS_report_dialog {width: 400px;}
 .iCMS_report_dialog.loading .modal-dialog-buttons { display: none }
 .iCMS_report_dialog .options { margin-top: 8px }
 .iCMS_report_dialog .options li { padding: 4px 6px; list-style: none; line-height: 2 }
@@ -132,6 +117,36 @@ a,a:hover,a:focus { color: #259 }
 .iCMS_report_dialog .headnote { float: right; color: #999 }
 .iCMS_report_dialog .footnote { color: #999 }
 .iCMS_report_dialog .loading { text-align: center; color: #999 }
+/* pm */
+#iCMS-pm-box{display: none;}
+.iCMS_pm_dialog{width: 360px;margin-left: -15px;}
+.iCMS_pm_dialog dt label { color: #999; text-align: right; font-size: 13px; float: left; width: 60px; }
+.iCMS_pm_dialog .pm_inbox { float: right; }
+.iCMS_pm_dialog .pm_content { width: 280px; padding: 5px; height: 60px; }
+.iCMS_pm_dialog .pm_warnmsg{text-align: right;color: #C3412F;display: none;font-size: 13px;}
+.iCMS_pm_dialog .buttons{padding-right: 3px !important;}
+/* favorite */
+#iCMS-favorite-box{display: none;}
+.iCMS_favorite_dialog{width: 400px;}
+.iCMS_favorite_dialog .buttons .create{margin-top: 5px;}
+.iCMS_favorite_dialog .fav_add_title_error{color: #C33;margin-left: 10px;display: none;}
+.iCMS_favorite_dialog .favorite_list_content .favo-list-item-link {
+    display: block;
+    margin: 0 12px;
+    border: solid 1px #DDD;
+    padding: 8px 12px;
+    box-shadow: 0 1px 1px rgba(0,0,0,.05)
+}
+.iCMS_favorite_dialog .favorite_list_content .favo-list-item-link .meta {
+    display: block
+}
+.iCMS_favorite_dialog .favorite_list_content .favo-list-item-link:hover {
+    text-decoration: none;
+    background-color: #F5F5F5
+}
+.iCMS_favorite_dialog .favorite_list_content .active {
+background: url(img/check.png) no-repeat 96% center;
+}
 /* ================================ */
 .iCMS_agreement_wrap { padding-right: 40px; padding-left: 40px; width: 880px; _width: 880px }
 .iCMS_agreement_wrap .agr_h { margin-bottom: 50px; text-align: center; font-weight: bold; font-size: 26px }
@@ -144,15 +159,16 @@ a,a:hover,a:focus { color: #259 }
 .iCMS_up_down .up_down_txt { color: #666; }
 .iCMS_up_down .up { background: url(img/up.png) no-repeat; _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled='true', sizingMethod='scale', src='img/up.png'); _background: none; }
 .iCMS_up_down .down { background: url(img/down.png) no-repeat; top: 6px; _filter: progid:DXImageTransform.Microsoft.AlphaImageLoader(enabled='true', sizingMethod='scale', src='img/down.png'); _background: none; }
-/* iCMS.tip */
+/* iCMS.tooltip for poshytip*/
 .iCMS_tooltip { z-index: 1000; position: absolute; z-index: 1050; display: block; padding: 0px }
 .iCMS_tooltip .tip-arrow { display: none; }
 .iCMS_tooltip.popover { max-width: none; }
 .iCMS_tooltip.popover .popover-content { padding: 4px !important; }
-.iCMS_tooltip.popover .popover-content p, .iCMS_tooltip .popover-content ul, .iCMS_tooltip .popover-content ol { margin-bottom: 0 }
-
+.iCMS_tooltip.popover .popover-content p,
+	.iCMS_tooltip .popover-content ul,
+	.iCMS_tooltip .popover-content ol { margin-bottom: 0 }
 /*ucard*/
-.iCMS_ucard { width: 380px }
+.iCMS_ucard { width: 360px }
 .iCMS_ucard .upper, .iCMS_ucard .lower { border: 14px solid transparent }
 .iCMS_ucard .upper { background: #fff; padding-left: 66px; min-height: 50px }
 .iCMS_ucard .upper a.avatar-link { position: relative }
@@ -185,18 +201,10 @@ a,a:hover,a:focus { color: #259 }
 .iCMS_ucard .lower .meta .item .key { font-size: 14px; color: #999 }
 .iCMS_ucard .lower .meta .item:first-child { padding-left: 0 }
 .iCMS_ucard .lower .meta .item:last-child { border-right: 0 none }
-/* pm */
 
-#iCMS-pm-box{ display: none;margin-left: -5px;}
-.iCMS_pm_dialog{width: 360px;}
-.iCMS_pm_dialog dt label { color: #999; text-align: right; font-size: 13px; float: left; width: 60px; }
-.iCMS_pm_dialog .pm_inbox { float: right; }
-.iCMS_pm_dialog .pm_content { width: 280px; padding: 5px; height: 60px; }
-.iCMS_pm_dialog .pm_warnmsg{text-align: right;color: #C3412F;display: none;font-size: 13px;}
-.iCMS_pm_dialog .buttons{padding-right: 3px !important;}
-/* favorite */
-.iCMS_favorite.popover .popover-content{padding: 1px !important;}
+/*.iCMS_favorite.popover .popover-content{padding: 1px !important;}
 .iCMS_favorite.popover .popover-title{font-weight: bold;color: #888;}
 .iCMS_favorite .buttons { padding: 0 15px; margin-bottom: 15px; text-align: right; background: #fff }
 .iCMS_favorite .buttons a.cancel { color: #259; margin-right: 15px; cursor: pointer; }
 .iCMS_favorite .buttons a.cancel:hover { text-decoration: underline; }
+*/
