--- a/template/iCMS/public.common.htm
+++ b/template/iCMS/public.common.htm
@@ -1,16 +1,6 @@
 
-<div id="iPHP-DIALOG" class="hide"><img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......</div>
-<div id="iCMS-MODAL" class="modal">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-      <h3 class="modal-title">iCMS 提示</h3>
-    </div>
-    <div class="modal-body">
-      <p class="modal-loading"><img src="<!--{$site.urls.ui}-->/img/loading.gif" /> 加载中,请稍侯......</p>
-    </div>
-</div>
-<div id="iCMS-login-dialog">
-    <div class="iCMS_login_wrap">
+<div id="iCMS-login-box">
+    <div class="iCMS_login_dialog">
       <div class="login_box">
         <p class="login_fail"></p>
         <div class="login_form">
@@ -110,13 +100,34 @@
 </div>
 <div id="iCMS-favorite-box">
     <div class="iCMS_favorite_dialog">
-      <h3 class="popover-title">添加收藏夹</h3>
-      <dl>
-        <dt></dt>
-        <dd></dd>
-      </dl>
-      <div class="buttons clearfix mt15"> <a class="cancel">取消</a>
-        <button type="button" name="favorite" class="btn btn-primary">收藏</button>
+      <div class="favorite_list">
+        <div class="favorite_list_content">
+        </div>
+        <div class="buttons clearfix mt15">
+          <a class="create fl" href="javascript:;">+ 创建收藏夹</a>
+          <button type="button" name="favorite" class="cancel btn btn-primary">关闭</button>
+        </div>
+      </div>
+      <div class="favorite_create hide">
+        <div class="favorite_create_content">
+          <label style="display: inline;">标题</label><span class="fav_add_title_error">请填写标题</span>
+          <input type="text" name="title" class="input-text span5" placeholder="最多输入20字">
+          <label>描述（可选）</label>
+          <textarea name="description" class="input-text span5" placeholder="最多输入256字" style="height: 66px;"></textarea>
+          <div class="clearfix mt10"></div>
+          <label class="radio">
+            <input type="radio" name="mode" value="1" checked>
+            <b> 公开 </b><span class="gray">公开后不能设置为私密</span>
+          </label>
+          <label class="radio">
+            <input type="radio" name="mode" value="0">
+            <b> 私密 </b><span class="gray">只有你可以查看这个收藏夹</span>
+          </label>
+        </div>
+        <div class="buttons clearfix mt15">
+          <a class="cancel_create mr20" href="javascript:;">取消</a>
+          <button type="button" name="create" class="btn btn-primary">确认创建</button>
+        </div>
       </div>
     </div>
 </div>
