--- a/template/iCMS/user/manage/category.htm
+++ b/template/iCMS/user/manage/category.htm
@@ -2,8 +2,8 @@
     <input name="action" type="hidden" value="manage" />
     <input name="pg" type="hidden" value="category" />
     <div class="title"><span>我的分类</span></div>
-    <div class="category ml30"> 
-      <!--{iCMS:user:category loop="true" userid="$user.uid" appid="$iCMS.CONST[iCMS_APP_ARTICLE]"}-->
+    <div class="category ml30">
+      <!--{iCMS:user:category loop="true" userid="$user.uid" appid="$iCMS.APPID.ARTICLE"}-->
       <input name="_cid[]" type="hidden" value="<!--{$user_category.cid}-->" />
       <div class="input-prepend input-append"> <span class="add-on"><!--{$user_category.rownum}--></span>
         <input class="span3" name="name[<!--{$user_category.cid}-->]" type="text" value="<!--{$user_category.name}-->">
@@ -31,5 +31,5 @@ $(function(){
 		$(this).parent().remove();
 	});
 });
-</script> 
-  
+</script>
+
