--- a/template/iCMS/user/manage/inbox.htm
+++ b/template/iCMS/user/manage/inbox.htm
@@ -56,7 +56,7 @@
 			</tbody>
 			<tfoot>
 	            <tr>
-	              <td colspan="3"><div class="iCMS_pagination"><!--{$iCMS.page.nav}--></div></td>
+	              <td colspan="3"><div class="iCMS_pagination"><!--{$iCMS.PAGE.NAV}--></div></td>
 	            </tr>
           </tfoot>
 		</table>
