--- a/template/iCMS/user/manage/publish.htm
+++ b/template/iCMS/user/manage/publish.htm
@@ -1,5 +1,5 @@
 <script>
-iCMS.config.fileTypes = "*.<!--{$iCMS.config.FS.allow_ext|replace:',':';*.'}-->";
+iCMS.config.fileTypes = "*.<!--{$iCMS.CONFIG.FS.allow_ext|replace:',':';*.'}-->";
 iCMS.config.UI        = '<!--{$iCMS.UI}-->';
 </script>
   <link href="<!--{$iCMS.UI}-->/bootstrap/2.3.1/css/bootstrap-switch.css" type="text/css" rel="stylesheet"/>
@@ -31,7 +31,7 @@ iCMS.config.UI        = '<!--{$iCMS.UI}-->';
         <input class="span6" name="title" id="title" type="text" value="<!--{$article.title}-->">
         <div class="btn-group" id="btn-group"> <a class="btn dropdown-toggle" data-toggle="dropdown" tabindex="-1"> <span class="caret"></span> <span id="uc_select">默认分类</span></a>
           <ul class="dropdown-menu">
-            <!--{iCMS:user:category loop="true" userid="$user.uid" appid="$iCMS.CONST[iCMS_APP_ARTICLE]"}-->
+            <!--{iCMS:user:category loop="true" userid="$user.uid" appid="$iCMS.APPID.ARTICLE"}-->
             <li><a href="javascript:;" cid="<!--{$user_category.cid}-->" class="user_category"><!--{$user_category.name}--></a></li>
             <!--{/iCMS}-->
             <li id="user_category_0"><a href="javascript:;" cid="0" class="user_category">默认分类</a></li>
