--- a/template/mobile/index.htm
+++ b/template/mobile/index.htm
@@ -71,11 +71,11 @@
         <!--{/iCMS}-->
       </div>
       <div id="pages_next" class="hide">
-        <!--{$iCMS.page.next}-->
+        <!--{$iCMS.PAGE.NEXT}-->
       </div>
     </div>
     <script>
-    iCMS.scrollLoad("#iCMS-article-list",".panel","#pages_next",<!--{$iCMS.page.total}-->);
+    iCMS.scrollLoad("#iCMS-article-list",".panel","#pages_next",<!--{$iCMS.PAGE.TOTAL}-->);
     </script>
     <!--{include file="./footer.htm"}-->
   </body>
